# BillionBrains

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  init.sql  patch.json
.github/workflows/: ci-cd.yml
k8s/: ingress.yaml  kind-config.yaml  redis.yaml
k8s/apps/: svc-brain-core.yaml  svc-gateway.yaml  svc-identity.yaml  web-app.yaml
k8s/infrastructure/: nats.yaml  postgres.yaml  schema.sql
services/svc-brain-core/: Cargo.toml  Dockerfile
services/svc-brain-core/src/: config.rs  main.rs
services/svc-gateway/: Cargo.toml  Dockerfile
services/svc-gateway/src/: main.rs
services/svc-identity/: .env  Cargo.toml  Dockerfile
services/svc-identity/src/: config.rs  main.rs
shared-libs/proto/: Cargo.toml  build.rs
shared-libs/proto/src/: idea.proto  lib.rs  task.proto  team.proto  user.proto
terraform/: main.tf
web-app/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web-app/app/: globals.css  layout.tsx  page.tsx
web-app/app/actions/: login.ts  project.ts  signup.ts
web-app/app/dashboard/: layout.tsx  page.tsx
web-app/app/dashboard/creator/: page.tsx
web-app/app/dashboard/investor/: page.tsx
web-app/app/dashboard/new-idea/: page.tsx
web-app/app/login/: page.tsx
web-app/app/signup/: page.tsx
web-app/components/auth/: user-auth-form.tsx
web-app/components/dashboard/: launch-button.tsx  launch-wizard.tsx  notification-bell.tsx  project-board.tsx  project-docs.tsx  project-list.tsx  project-settings.tsx
web-app/components/layout/: Footer.tsx
web-app/components/marketing/: Features.tsx  Hero.tsx
(+1 files in other folders)
